--- a/package.json
+++ b/package.json
@@ -1,8 +1,17 @@
 {
-  "name": "medusa-starter-default",
+  "name": "medusa-plugin-feedback",
   "version": "0.0.1",
-  "description": "A starter for Medusa projects.",
-  "author": "Sebastian Rindom <skrindom@gmail.com>",
+  "description": "A MedusaJS plugin that seamlessly integrates ratings and reviews functionality into your applications.",
+  "authors": [
+    {
+      "name": "Labham Jain",
+      "email": "coding.labham@gmail.com"
+    },
+    {
+      "name": "Sebastian Rindom",
+      "email": "skrindom@gmail.com"
+    }
+  ],
   "license": "MIT",
   "keywords": [
     "sqlite",
@@ -10,7 +19,11 @@
     "typescript",
     "ecommerce",
     "headless",
-    "medusa"
+    "medusa",
+    "reviews",
+    "feedback",
+    "comments",
+    "ratings"
   ],
   "scripts": {
     "clean": "cross-env ./node_modules/.bin/rimraf dist",
@@ -50,6 +63,7 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-typescript": "^7.21.4",
     "@medusajs/medusa-cli": "^1.3.16",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
