--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,30 @@
 {
   "compilerOptions": {
-    "target": "es2019",
-    "allowJs": true,
+    "lib": [
+      "es2020"
+    ],
+    "target": "ES2020",
+    "outDir": "./dist",
     "esModuleInterop": true,
+    "declaration": true,
     "module": "commonjs",
     "moduleResolution": "node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
+    "sourceMap": true,
+    "noImplicitReturns": true,
+    "strictNullChecks": true,
+    "strictFunctionTypes": true,
+    "noImplicitThis": true,
+    "allowJs": true,
     "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
-    "declaration": true,
-    "sourceMap": false,
-    "outDir": "./dist",
-    "rootDir": "./src",
-    "baseUrl": ".",
-    "jsx": "react-jsx",
-    "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true,
-    "checkJs": false
   },
-  "include": ["src/"],
+  "include": ["src", "src/models/product-feedback.ts", "src/models/customer.ts"],
   "exclude": [
-    "**/__tests__",
-    "**/__fixtures__",
-    "node_modules",
-    "build",
-    ".cache"
+    "dist",
+    "./src/**/__tests__",
+    "./src/**/__mocks__",
+    "./src/**/__fixtures__",
+    "node_modules"
   ]
 }
